@@ -2902,7 +2902,7 @@ coefficients such that $\kbd{au} + \kbd{bv} = d$.
 $d$ of \kbd{a} and \kbd{b} and sets \kbd{u}, \kbd{v} to the Bezout coefficients
 such that $\kbd{au} + \kbd{bv} = d$.
 
-\fun{GEN}{ZV_gcdext}{GEN A} given a vector of $n$ integers $A$, returns $[d,
+\fun{GEN}{ZV_extgcd}{GEN A} given a vector of $n$ integers $A$, returns $[d,
 U]$, where $d$ is the GCD of the $A[i]$ and $U$ is a matrix
 in $\text{GL}_n(\Z)$ such that $AU = [0,\dots,0,D]$.
 
@@ -6314,7 +6314,7 @@ assumed to have compatible dimensions).
 \fun{GEN}{ZV_content}{GEN x} returns the GCD of all the components
 of~\kbd{x}.
 
-\fun{GEN}{ZV_gcdext}{GEN A} given a vector of $n$ integers $A$, returns $[d,
+\fun{GEN}{ZV_extgcd}{GEN A} given a vector of $n$ integers $A$, returns $[d,
 U]$, where $d$ is the content of $A$ and $U$ is a matrix
 in $\text{GL}_n(\Z)$ such that $AU = [D,0, \dots,0]$.
 
